--- a/alumni_edge/package.json
+++ b/alumni_edge/package.json
@@ -2,7 +2,7 @@
   "name": "alumni_edge",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/TonyT415/CSC642-AlumiEdge",
+  "homepage": "https://github.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
